@@ -1,5 +1,9 @@
 2005-12-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
+	* lib/polbase.cpp :
+
+	  - add_consttab() now accepts non-ground expressions.
+
 	* lib/consttab.cpp :
 	* lib/consttab.h :
 
